test code in lstm_server.py

--- a/LSTMVis/lstmdata/test.ipynb
+++ b/LSTMVis/lstmdata/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,14 +609,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
+   "execution_count": 55,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "05childbook\n",
+      "<__main__.LSTMDataHandler object at 0x121f56c90>\n",
+      "parens\n",
+      "<__main__.LSTMDataHandler object at 0x121c632d0>\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/jaywang/anaconda3/envs/data_science/lib/python3.7/site-packages/ipykernel_launcher.py:6: YAMLLoadWarning: calling yaml.load() without Loader=... is deprecated, as the default Loader is unsafe. Please read https://msg.pyyaml.org/load for full details.\n",
+      "/Users/jaywang/anaconda3/envs/data_science/lib/python3.7/site-packages/ipykernel_launcher.py:14: YAMLLoadWarning: calling yaml.load() without Loader=... is deprecated, as the default Loader is unsafe. Please read https://msg.pyyaml.org/load for full details.\n",
       "  \n"
      ]
     }
@@ -625,64 +637,65 @@
     "CONFIG_FILE_NAME = 'lstm.yml'\n",
     "data_handlers = {}\n",
     "index_map = {}\n",
-    "p_dir = '/Users/jaywang/Documents/TTU_study/Fall2019/LSTMVis/data/05childbook/05childbook'\n",
-    "with open(os.path.join(p_dir, CONFIG_FILE_NAME), 'r') as yf:\n",
-    "    config = yaml.load(yf)\n",
-    "    dh_id = os.path.split(p_dir)[1]\n",
-    "    data_handlers[dh_id] = LSTMDataHandler(directory=p_dir, config=config)\n",
-    "    if data_handlers[dh_id].config['index']:\n",
-    "        index_map[dh_id] = data_handlers[dh_id].config['index_dir']\n"
+    "project_dirs = []\n",
+    "# os.walk: iterate all the files and folders under a top directory, returns a 3-element tuple of (root, dirs, files)\n",
+    "# root: current directory, dirs: a list of sub directories, files: a list of sub files\n",
+    "for root, dirs, files in os.walk('/Users/jaywang/Documents/TTU_study/Fall2019/LSTMVis/data/05childbook/'):\n",
+    "    if CONFIG_FILE_NAME in files:\n",
+    "        project_dirs.append(os.path.abspath(root)) # os.path.abspath(path) returns the absolute path of 'lstm.yml'\n",
+    "\n",
+    "i = 0\n",
+    "for p_dir in project_dirs:\n",
+    "        with open(os.path.join(p_dir, CONFIG_FILE_NAME), 'r') as yf:\n",
+    "            config = yaml.load(yf) # config now is a dictionary\n",
+    "            dh_id = os.path.split(p_dir)[1] # '05childbook'\n",
+    "#             print(dh_id)\n",
+    "            data_handlers[dh_id] = LSTMDataHandler(directory=p_dir, config=config)\n",
+    "#             print(data_handlers[dh_id])\n",
+    "            if data_handlers[dh_id].config['index']:\n",
+    "                index_map[dh_id] = data_handlers[dh_id].config['index_dir'] # {'05childbook': '/Users/jaywang/Documents/TTU_study/Fall2019/LSTMVis/data/05childbook/05childbook/indexdir'}\n",
+    "        i += 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<__main__.LSTMDataHandler at 0x11cd1d910>"
+       "['/Users/jaywang/Documents/TTU_study/Fall2019/LSTMVis/data/05childbook/05childbook',\n",
+       " '/Users/jaywang/Documents/TTU_study/Fall2019/LSTMVis/data/05childbook/parens']"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_handlers[dh_id].get_words"
+    "project_dirs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "create_data_handler"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "string indices must be integers",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-bb5d7d5ec4b0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ms\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mLSTMDataHandler\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/Users/jaywang/Documents/TTU_study/Fall2019/LSTMVis'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'lstm.yml'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-1-adb1565d1ca5>\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, directory, config)\u001b[0m\n\u001b[1;32m     30\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m         \u001b[0;31m# open all h5 files\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 32\u001b[0;31m         \u001b[0mh5files\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mv\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mv\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mconfig\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'files'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miteritems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mendswith\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'.h5'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mendswith\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'.hdf5'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     33\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfile_name\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mh5files\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miteritems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mh5_files\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mh5py\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mFile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdirectory\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfile_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'r'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: string indices must be integers"
-     ]
+     "data": {
+      "text/plain": [
+       "{'05childbook': '/Users/jaywang/Documents/TTU_study/Fall2019/LSTMVis/data/05childbook/05childbook/indexdir'}"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "s = LSTMDataHandler('/Users/jaywang/Documents/TTU_study/Fall2019/LSTMVis', 'lstm.yml')"
+    "index_map"
    ]
   },
   {
@@ -691,6 +704,324 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'05childbook': <__main__.LSTMDataHandler at 0x121f56c90>,\n",
+       " 'parens': <__main__.LSTMDataHandler at 0x121c632d0>}"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_handlers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'05childbook': <__main__.LSTMDataHandler at 0x121694990>,\n",
+       " 'parens': <__main__.LSTMDataHandler at 0x121689dd0>}"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_handlers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'activation': 0.3,\n",
+       " 'cells': [2],\n",
+       " 'dims': ['states', 'words'],\n",
+       " 'left': 3,\n",
+       " 'pos': [12],\n",
+       " 'project': 'parens',\n",
+       " 'right': 3,\n",
+       " 'source': 'states::states1',\n",
+       " 'transform': 'tanh'}"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "request = {\n",
+    "    \"activation\": 0.3,\n",
+    "    \"cells\": [\n",
+    "      2\n",
+    "    ],\n",
+    "    \"dims\": [\n",
+    "      \"states\",\n",
+    "      \"words\"\n",
+    "    ],\n",
+    "    \"left\": 3,\n",
+    "    \"pos\": [\n",
+    "      12\n",
+    "    ],\n",
+    "    \"project\": \"parens\",\n",
+    "    \"right\": 3,\n",
+    "    \"source\": \"states::states1\",\n",
+    "    \"transform\": \"tanh\"\n",
+    "  }\n",
+    "request"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "project = request['project']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'parens'"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "project"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "project in data_handlers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dh = data_handlers[project]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2]"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cells = request['cells']\n",
+    "cells"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = dh.get_dimensions(\n",
+    "            pos_array=request['pos'],\n",
+    "            source=request['source'],\n",
+    "            left=request['left'],\n",
+    "            right=request['right'],\n",
+    "            dimensions=request['dims'],\n",
+    "            data_transform=request['transform'],\n",
+    "            cells=cells,\n",
+    "            activation_threshold=request['activation']\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'states': [{'pos': 12,\n",
+       "   'left': 9,\n",
+       "   'right': 15,\n",
+       "   'data': [[-0.74336,\n",
+       "     -0.74502,\n",
+       "     -0.49196,\n",
+       "     -0.7894,\n",
+       "     -0.74757,\n",
+       "     -0.51531,\n",
+       "     -0.57777]]}],\n",
+       " 'words': [{'pos': 12,\n",
+       "   'word_ids': [4, 4, 5, 6, 4, 5, 7],\n",
+       "   'words': ['0', '0', '(', ')', '0', '(', '1'],\n",
+       "   'left': 9,\n",
+       "   'right': 15}]}"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res['cells'] = cells"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'states': [{'pos': 12,\n",
+       "   'left': 9,\n",
+       "   'right': 15,\n",
+       "   'data': [[-0.74336,\n",
+       "     -0.74502,\n",
+       "     -0.49196,\n",
+       "     -0.7894,\n",
+       "     -0.74757,\n",
+       "     -0.51531,\n",
+       "     -0.57777]]}],\n",
+       " 'words': [{'pos': 12,\n",
+       "   'word_ids': [4, 4, 5, 6, 4, 5, 7],\n",
+       "   'words': ['0', '0', '(', ')', '0', '(', '1'],\n",
+       "   'left': 9,\n",
+       "   'right': 15}],\n",
+       " 'cells': [2]}"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ret = {'request': request, 'results':res}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'request': {'activation': 0.3,\n",
+       "  'cells': [2],\n",
+       "  'dims': ['states', 'words'],\n",
+       "  'left': 3,\n",
+       "  'pos': [12],\n",
+       "  'project': 'parens',\n",
+       "  'right': 3,\n",
+       "  'source': 'states::states1',\n",
+       "  'transform': 'tanh'},\n",
+       " 'results': {'states': [{'pos': 12,\n",
+       "    'left': 9,\n",
+       "    'right': 15,\n",
+       "    'data': [[-0.74336,\n",
+       "      -0.74502,\n",
+       "      -0.49196,\n",
+       "      -0.7894,\n",
+       "      -0.74757,\n",
+       "      -0.51531,\n",
+       "      -0.57777]]}],\n",
+       "  'words': [{'pos': 12,\n",
+       "    'word_ids': [4, 4, 5, 6, 4, 5, 7],\n",
+       "    'words': ['0', '0', '(', ')', '0', '(', '1'],\n",
+       "    'left': 9,\n",
+       "    'right': 15}],\n",
+       "  'cells': [2]}}"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ret"
+   ]
   },
   {
    "cell_type": "code",
