Added comments to server side code

--- a/LSTMVis/lstmdata/test.ipynb
+++ b/LSTMVis/lstmdata/test.ipynb
@@ -855,6 +855,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.LSTMDataHandler at 0x121c632d0>"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dh"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 65,
    "metadata": {},
    "outputs": [
@@ -982,7 +1002,9 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1021,6 +1043,311 @@
    ],
    "source": [
     "ret"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'05childbook': <__main__.LSTMDataHandler at 0x121f56c90>,\n",
+       " 'parens': <__main__.LSTMDataHandler at 0x121c632d0>}"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_handlers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'parens 10k',\n",
+       " 'description': 'parens dataset 10k ONLY',\n",
+       " 'files': {'states': 'states.hdf5',\n",
+       "  'train': 'train.hdf5',\n",
+       "  'words': 'train.dict'},\n",
+       " 'word_sequence': {'file': 'train',\n",
+       "  'path': 'words',\n",
+       "  'dict_file': 'words',\n",
+       "  'size': [10001],\n",
+       "  'dict_size': 10},\n",
+       " 'states': {'file': 'states',\n",
+       "  'types': [{'type': 'state',\n",
+       "    'layer': 1,\n",
+       "    'path': 'states1',\n",
+       "    'file': 'states',\n",
+       "    'unsigned': False,\n",
+       "    'transform': 'tanh',\n",
+       "    'size': [10000, 200]},\n",
+       "   {'type': 'state',\n",
+       "    'layer': 2,\n",
+       "    'path': 'states2',\n",
+       "    'file': 'states',\n",
+       "    'unsigned': False,\n",
+       "    'transform': 'tanh',\n",
+       "    'size': [10000, 200]},\n",
+       "   {'type': 'output',\n",
+       "    'layer': 2,\n",
+       "    'path': 'output2',\n",
+       "    'file': 'states',\n",
+       "    'unsigned': False,\n",
+       "    'transform': 'tanh',\n",
+       "    'size': [10000, 200]}]},\n",
+       " 'word_embedding': {'size': [-1, -1]},\n",
+       " 'index': False,\n",
+       " 'meta': [],\n",
+       " 'etc': {'regex_search': False},\n",
+       " 'is_searchable': False}"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_handlers['parens'].config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dive into get_info() function\n",
+    "res = []\n",
+    "for key, project in data_handlers.items():\n",
+    "    # print key\n",
+    "    res.append({\n",
+    "        'project': key,\n",
+    "        'info': project.config\n",
+    "    })"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'project': '05childbook',\n",
+       "  'info': {'name': \"Word Model (Children's Books)\",\n",
+       "   'description': \"A 1x200 LSTM language model trained on the Gutenberg Children's Book corpus.\",\n",
+       "   'files': {'states': 'states.h5',\n",
+       "    'train': 'train.h5',\n",
+       "    'words': 'words.dict',\n",
+       "    'pos': 'pos.h5',\n",
+       "    'pos_dict': 'pos.dict',\n",
+       "    'ner': 'ner.h5',\n",
+       "    'ner_dict': 'ner.dict'},\n",
+       "   'word_sequence': {'file': 'train',\n",
+       "    'path': 'words',\n",
+       "    'dict_file': 'words',\n",
+       "    'size': [1271912],\n",
+       "    'dict_size': 21688},\n",
+       "   'states': {'file': 'states',\n",
+       "    'types': [{'type': 'cell',\n",
+       "      'layer': 1,\n",
+       "      'path': 'states1',\n",
+       "      'unsigned': False,\n",
+       "      'file': 'states',\n",
+       "      'transform': 'tanh',\n",
+       "      'size': [1271900, 200]},\n",
+       "     {'type': 'hidden',\n",
+       "      'layer': 1,\n",
+       "      'path': 'output1',\n",
+       "      'unsigned': False,\n",
+       "      'file': 'states',\n",
+       "      'transform': 'tanh',\n",
+       "      'size': [1271900, 200]}]},\n",
+       "   'meta': {'part_of_speech': {'file': 'pos',\n",
+       "     'path': 'pos',\n",
+       "     'dict': 'pos_dict',\n",
+       "     'vis': {'type': 'discrete',\n",
+       "      'range': dict_keys(['ADV', 'NOUN', 'NUM', 'ADP', 'PRON', 'PROPN', 'DET', 'SYM', 'INTJ', 'PART', 'PUNCT', 'VERB', 'X', 'CONJ', 'ADJ'])},\n",
+       "     'type': 'general',\n",
+       "     'index': 'self'},\n",
+       "    'named_entity': {'file': 'ner',\n",
+       "     'path': 'ner',\n",
+       "     'dict': 'ner_dict',\n",
+       "     'vis': {'type': 'discrete',\n",
+       "      'range': dict_keys(['ORDINAL', 'LOC', 'PRODUCT', 'NORP', 'WORK_OF_ART', 'LANGUAGE', 'GPE', 'MONEY', 'O', 'PERSON', 'CARDINAL', 'TIME', 'DATE', 'ORG', 'LAW', 'EVENT', 'QUANTITY'])},\n",
+       "     'type': 'general',\n",
+       "     'index': 'self'}},\n",
+       "   'word_embedding': {'size': [-1, -1]},\n",
+       "   'index': True,\n",
+       "   'index_dir': '/Users/jaywang/Documents/TTU_study/Fall2019/LSTMVis/data/05childbook/05childbook/indexdir',\n",
+       "   'etc': {'regex_search': False},\n",
+       "   'is_searchable': True}},\n",
+       " {'project': 'parens',\n",
+       "  'info': {'name': 'parens 10k',\n",
+       "   'description': 'parens dataset 10k ONLY',\n",
+       "   'files': {'states': 'states.hdf5',\n",
+       "    'train': 'train.hdf5',\n",
+       "    'words': 'train.dict'},\n",
+       "   'word_sequence': {'file': 'train',\n",
+       "    'path': 'words',\n",
+       "    'dict_file': 'words',\n",
+       "    'size': [10001],\n",
+       "    'dict_size': 10},\n",
+       "   'states': {'file': 'states',\n",
+       "    'types': [{'type': 'state',\n",
+       "      'layer': 1,\n",
+       "      'path': 'states1',\n",
+       "      'file': 'states',\n",
+       "      'unsigned': False,\n",
+       "      'transform': 'tanh',\n",
+       "      'size': [10000, 200]},\n",
+       "     {'type': 'state',\n",
+       "      'layer': 2,\n",
+       "      'path': 'states2',\n",
+       "      'file': 'states',\n",
+       "      'unsigned': False,\n",
+       "      'transform': 'tanh',\n",
+       "      'size': [10000, 200]},\n",
+       "     {'type': 'output',\n",
+       "      'layer': 2,\n",
+       "      'path': 'output2',\n",
+       "      'file': 'states',\n",
+       "      'unsigned': False,\n",
+       "      'transform': 'tanh',\n",
+       "      'size': [10000, 200]}]},\n",
+       "   'word_embedding': {'size': [-1, -1]},\n",
+       "   'index': False,\n",
+       "   'meta': [],\n",
+       "   'etc': {'regex_search': False},\n",
+       "   'is_searchable': False}}]"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'project': '05childbook',\n",
+       "  'info': {'name': \"Word Model (Children's Books)\",\n",
+       "   'description': \"A 1x200 LSTM language model trained on the Gutenberg Children's Book corpus.\",\n",
+       "   'files': {'states': 'states.h5',\n",
+       "    'train': 'train.h5',\n",
+       "    'words': 'words.dict',\n",
+       "    'pos': 'pos.h5',\n",
+       "    'pos_dict': 'pos.dict',\n",
+       "    'ner': 'ner.h5',\n",
+       "    'ner_dict': 'ner.dict'},\n",
+       "   'word_sequence': {'file': 'train',\n",
+       "    'path': 'words',\n",
+       "    'dict_file': 'words',\n",
+       "    'size': [1271912],\n",
+       "    'dict_size': 21688},\n",
+       "   'states': {'file': 'states',\n",
+       "    'types': [{'type': 'cell',\n",
+       "      'layer': 1,\n",
+       "      'path': 'states1',\n",
+       "      'unsigned': False,\n",
+       "      'file': 'states',\n",
+       "      'transform': 'tanh',\n",
+       "      'size': [1271900, 200]},\n",
+       "     {'type': 'hidden',\n",
+       "      'layer': 1,\n",
+       "      'path': 'output1',\n",
+       "      'unsigned': False,\n",
+       "      'file': 'states',\n",
+       "      'transform': 'tanh',\n",
+       "      'size': [1271900, 200]}]},\n",
+       "   'meta': {'part_of_speech': {'file': 'pos',\n",
+       "     'path': 'pos',\n",
+       "     'dict': 'pos_dict',\n",
+       "     'vis': {'type': 'discrete',\n",
+       "      'range': dict_keys(['ADV', 'NOUN', 'NUM', 'ADP', 'PRON', 'PROPN', 'DET', 'SYM', 'INTJ', 'PART', 'PUNCT', 'VERB', 'X', 'CONJ', 'ADJ'])},\n",
+       "     'type': 'general',\n",
+       "     'index': 'self'},\n",
+       "    'named_entity': {'file': 'ner',\n",
+       "     'path': 'ner',\n",
+       "     'dict': 'ner_dict',\n",
+       "     'vis': {'type': 'discrete',\n",
+       "      'range': dict_keys(['ORDINAL', 'LOC', 'PRODUCT', 'NORP', 'WORK_OF_ART', 'LANGUAGE', 'GPE', 'MONEY', 'O', 'PERSON', 'CARDINAL', 'TIME', 'DATE', 'ORG', 'LAW', 'EVENT', 'QUANTITY'])},\n",
+       "     'type': 'general',\n",
+       "     'index': 'self'}},\n",
+       "   'word_embedding': {'size': [-1, -1]},\n",
+       "   'index': True,\n",
+       "   'index_dir': '/Users/jaywang/Documents/TTU_study/Fall2019/LSTMVis/data/05childbook/05childbook/indexdir',\n",
+       "   'etc': {'regex_search': False},\n",
+       "   'is_searchable': True}},\n",
+       " {'project': 'parens',\n",
+       "  'info': {'name': 'parens 10k',\n",
+       "   'description': 'parens dataset 10k ONLY',\n",
+       "   'files': {'states': 'states.hdf5',\n",
+       "    'train': 'train.hdf5',\n",
+       "    'words': 'train.dict'},\n",
+       "   'word_sequence': {'file': 'train',\n",
+       "    'path': 'words',\n",
+       "    'dict_file': 'words',\n",
+       "    'size': [10001],\n",
+       "    'dict_size': 10},\n",
+       "   'states': {'file': 'states',\n",
+       "    'types': [{'type': 'state',\n",
+       "      'layer': 1,\n",
+       "      'path': 'states1',\n",
+       "      'file': 'states',\n",
+       "      'unsigned': False,\n",
+       "      'transform': 'tanh',\n",
+       "      'size': [10000, 200]},\n",
+       "     {'type': 'state',\n",
+       "      'layer': 2,\n",
+       "      'path': 'states2',\n",
+       "      'file': 'states',\n",
+       "      'unsigned': False,\n",
+       "      'transform': 'tanh',\n",
+       "      'size': [10000, 200]},\n",
+       "     {'type': 'output',\n",
+       "      'layer': 2,\n",
+       "      'path': 'output2',\n",
+       "      'file': 'states',\n",
+       "      'unsigned': False,\n",
+       "      'transform': 'tanh',\n",
+       "      'size': [10000, 200]}]},\n",
+       "   'word_embedding': {'size': [-1, -1]},\n",
+       "   'index': False,\n",
+       "   'meta': [],\n",
+       "   'etc': {'regex_search': False},\n",
+       "   'is_searchable': False}}]"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted(res, key=lambda x: x['project'])"
    ]
   },
   {
